fix: update box-shadow colors to use oklch for improved contrast

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -190,27 +190,55 @@ body > nav {
 	}
 
 	& > ul {
+		--border-radius: 0.5rem;
 		grid-area: nav;
 		display: flex;
 		list-style: none;
 		justify-content: center;
 		margin: unset;
-		padding: unset;
-		padding-block: 0.5rem;
-		padding-block: 0.5rem;
-	}
-
-	& li {
+		padding: 0.25rem;
 		border: 2px solid transparent;
 		background:
-			radial-gradient(circle at 50% 250%, var(--color-subtle-bg), var(--color-bg)),
-			linear-gradient(var(--color-bg), var(--color-subtle-bg));
+			linear-gradient(var(--color-bg), var(--color-bg)),
+			linear-gradient(oklch(from var(--color-bg) calc(l + 0.2) c h), oklch(from var(--color-bg) calc(l - 0.2) c h));
 		background-clip: padding-box, border-box;
 		background-origin: padding-box, border-box;
 
 		box-shadow:
-			0 0.75rem 1rem -0.25rem hsl(var(--hsl-shadow) / 0.06),
-			0 0.25rem 0.375rem -0.125rem hsl(var(--hsl-shadow) / 0.02);
+			0 0.125rem 1rem -0.125rem oklch(from black l c h / 0.75),
+			inset 0 -0.125rem 0.125rem -0.075rem oklch(from white l c h / 0.1);
+		border-radius: calc(var(--border-radius) + 0.25rem); /* inner radius + padding */
+
+		anchor-name: --main-nav;
+
+		@container scroll-state (stuck: top) {
+			background: none;
+			box-shadow: none;
+		}
+
+		@media (prefers-reduced-motion: no-preference) {
+			&::before {
+				content: "";
+				position: absolute;
+				position-anchor: --main-nav;
+				background: linear-gradient(
+					oklch(from var(--color-bg) calc(l + 0.05) c h),
+					oklch(from var(--color-bg) calc(l - 0.2) c h)
+				);
+				inset: anchor(inside);
+				border-radius: calc(var(--border-radius)); /* inner radius + padding */
+				margin: calc(0.25rem + 2px); /* padding + border */
+				transition: all 0.2s;
+			}
+			&:has(a:is(:hover, :focus-visible))::before {
+				margin: 0;
+			}
+		}
+	}
+
+	& li {
+		border-radius: var(--border-radius);
+		z-index: 1;
 
 		& a {
 			display: block;
@@ -220,35 +248,22 @@ body > nav {
 			text-decoration: none;
 			text-transform: uppercase;
 			outline-offset: 0;
+			font-weight: 500;
+			border-radius: var(--border-radius);
 
+			&:is(:hover, :focus-visible) {
+				color: currentcolor;
+				text-shadow: 0.025em 0.025em 0.025em oklch(from currentcolor l c h / 0 5);
+			}
 			&[aria-current] {
-				font-weight: bold;
+				background-color: var(--color-accent);
+				color: var(--color-bg);
+				font-weight: 700;
 			}
 		}
-		&:first-of-type {
-			border-start-start-radius: 0.5rem;
-			border-end-start-radius: 0.5rem;
-			border-inline-end-width: 1px;
-		}
-		&:last-of-type {
-			border-start-end-radius: 0.5rem;
-			border-end-end-radius: 0.5rem;
-			border-inline-start-width: 1px;
-		}
-		&:not(:first-of-type):not(:last-of-type) {
-			border-inline-width: 1px;
-		}
 
-		&:is(:hover, :focus-within) {
-			background:
-				radial-gradient(circle at 50% 250%, var(--color-subtle-bg) 75%, var(--color-highlight)),
-				linear-gradient(var(--color-highlight), var(--color-subtle-bg));
-			background-clip: padding-box, border-box;
-			background-origin: padding-box, border-box;
-
-			& > a {
-				color: var(--color-text);
-			}
+		&:has(> a:is(:hover, :focus)) {
+			anchor-name: --main-nav;
 		}
 	}
 }
@@ -276,8 +291,8 @@ body > footer {
 	background-clip: padding-box, border-box;
 	background-origin: padding-box, border-box;
 	box-shadow:
-		0 0.75rem 1rem -0.25rem hsl(var(--hsl-shadow) / 0.06),
-		0 0.25rem 0.375rem -0.125rem hsl(var(--hsl-shadow) / 0.02);
+		0 0.75rem 1rem -0.25rem oklch(from black l c h / 0.06),
+		0 0.25rem 0.375rem -0.125rem oklch(from black l c h / 0.02);
 	display: grid;
 	grid-template-columns: var(--grid-columns);
 
@@ -383,8 +398,8 @@ a:has(> article) {
 		background-origin: padding-box, border-box;
 
 		box-shadow:
-			0 0.75rem 1rem -0.25rem hsl(var(--hsl-shadow) / 0.06),
-			0 0.25rem 0.375rem -0.125rem hsl(var(--hsl-shadow) / 0.02);
+			0 0.75rem 1rem -0.25rem oklch(from black l c h / 0.06),
+			0 0.25rem 0.375rem -0.125rem oklch(from black l c h / 0.02);
 
 		h2,
 		h3 {
@@ -471,8 +486,8 @@ input {
 	background-origin: padding-box, border-box;
 
 	box-shadow:
-		0 0.75rem 1rem -0.25rem hsl(var(--hsl-shadow) / 0.06),
-		0 0.25rem 0.375rem -0.125rem hsl(var(--hsl-shadow) / 0.02);
+		0 0.75rem 1rem -0.25rem oklch(from black l c h / 0.06),
+		0 0.25rem 0.375rem -0.125rem oklch(from black l c h / 0.02);
 
 	&:is(:hover, :focus-within) {
 		background:
